gl: Move device-specific code into cairo-gl-device.c

--- a/src/Makefile.sources
+++ b/src/Makefile.sources
@@ -313,7 +313,11 @@ cairo_beos_headers = cairo-beos.h
 
 cairo_gl_headers = cairo-gl.h
 cairo_gl_private = cairo-gl-private.h
-cairo_gl_sources = cairo-gl-surface.c cairo-gl-glyphs.c cairo-gl-shaders.c
+cairo_gl_sources = cairo-gl-device.c \
+		   cairo-gl-glyphs.c \
+		   cairo-gl-shaders.c \
+		   cairo-gl-surface.c
+
 cairo_glx_sources += cairo-glx-context.c
 cairo_egl_sources += cairo-egl-context.c
 
