test: Add subsurface-image-repeat
Test handling of source clipping with an image - principally to check
handling of mime types and zero-copy image snapshotting in the vector
surfaces and ensure that they work with subsurface patterns as well.

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -1081,6 +1081,8 @@ REFERENCE_IMAGES = \
 	subsurface.image16.ref.png \
 	subsurface-reflect.ref.png \
 	subsurface-repeat.ref.png \
+	subsurface-image-repeat.ref.png \
+	subsurface-image-repeat.image16.ref.png \
 	subsurface-pad.ref.png \
 	subsurface-modify-child.ref.png \
 	subsurface-modify-parent.ref.png \
