test: add linear-gradient-extend and radial-gradient-extend
Check that constant gradient to solid color optimization are only
applied if the extents permit it.

--- a/test/Makefile.sources
+++ b/test/Makefile.sources
@@ -137,6 +137,7 @@ test_sources = \
 	line-width-scale.c				\
 	line-width-zero.c				\
 	linear-gradient.c				\
+	linear-gradient-extend.c			\
 	linear-gradient-reflect.c			\
 	linear-gradient-subset.c			\
 	linear-step-function.c				\
@@ -180,6 +181,7 @@ test_sources = \
 	push-group.c					\
 	push-group-color.c				\
 	radial-gradient.c				\
+	radial-gradient-extend.c			\
 	radial-gradient-source.c			\
 	radial-gradient-mask.c				\
 	radial-gradient-mask-source.c			\
