configure: Include PTHREAD_CFLAGS in CAIRO_LDFLAGS
Required for successful linking of our programs. I am not sure what the
impact this has upon other users of Cairo yet, I think we need to export
the PTHREAD_CFLAGS via cairo.pc as well.

--- a/configure.ac
+++ b/configure.ac
@@ -54,6 +54,7 @@ if test "x$have_pthread" = xno -a "x$use_pthread" = xyes; then
   AC_MSG_ERROR([pthread requested but not found])
 fi
 CAIRO_CFLAGS="$CAIRO_CFLAGS $PTHREAD_CFLAGS"
+CAIRO_LDFLAGS="$PTHREAD_CFLAGS $CAIRO_LDFLAGS"
 CAIRO_LIBS="$CAIRO_LIBS $PTHREAD_LIBS"
 
 dnl ===========================================================================
