gl: Make gradient textures a separate object
This is necessary so we can do proper refcounting and don't delete the
gradient texture prematurely.

--- a/src/Makefile.sources
+++ b/src/Makefile.sources
@@ -312,10 +312,12 @@ cairo_beos_headers = cairo-beos.h
 #cairo_beos_sources = cairo-beos-surface.cpp
 
 cairo_gl_headers = cairo-gl.h
-cairo_gl_private = cairo-gl-private.h
+cairo_gl_private = cairo-gl-private.h \
+		   cairo-gl-gradient-private.h
 cairo_gl_sources = cairo-gl-composite.c \
 		   cairo-gl-device.c \
 		   cairo-gl-glyphs.c \
+		   cairo-gl-gradient.c \
 		   cairo-gl-shaders.c \
 		   cairo-gl-surface.c
 
