--- a/test/Makefile.sources
+++ b/test/Makefile.sources
@@ -116,6 +116,7 @@ test_sources = \
 	group-clip.c					\
 	group-paint.c					\
 	group-unaligned.c				\
+	half-coverage.c					\
 	huge-linear.c					\
 	huge-radial.c					\
 	image-surface-source.c				\
