test: Exercise partial coverage some more.
Add some overlapping triangles (coarse enough for them to be resolved
using Cairo's 24.8 fixed point without loss of precision) to exercise
handling of overlapping subpixel geometry.

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -864,8 +864,12 @@ REFERENCE_IMAGES = \
 	paint.ref.png \
 	partial-coverage-half-reference.ref.png \
 	partial-coverage-half-triangles.ref.png \
+	partial-coverage-overlap-half-triangles.ref.png \
+	partial-coverage-overlap-half-triangles-eo.ref.png \
+	partial-coverage-overlap-three-quarter-triangles.ref.png \
 	partial-coverage-rectangles.ref.png \
 	partial-coverage-reference.ref.png \
+	partial-coverage-three-quarter-reference.ref.png \
 	partial-coverage-triangles.ref.png \
 	pass-through.ref.png \
 	pass-through.rgb24.ref.png \
