test: Add a simple coverage test.
This test case should be much clearer than half-coverage over what it
purports to actually test. In each pixel, it draws a single geometric
primitive that coverages a known percentage of the pixel and then we
measure how close the rasterisers are to that ideal.

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -332,6 +332,8 @@ REFERENCE_IMAGES = \
 	copy-path.ps2.ref.png \
 	copy-path.ps3.ref.png \
 	copy-path.ref.png \
+	coverage-rectangles.ref.png \
+	coverage-triangles.ref.png \
 	create-from-png-stream.ref.png \
 	create-from-png.alpha.ref.png \
 	create-from-png.gray-alpha.ref.png \
