gstate: Update cached matrix state after device transform changes on the target
Commit 8d67186cb291cb877e52b987e2ac18c2a1175a57 caches whether the device
transform is identity on context creation. However, the api is quite lax
and allows the user to modify the device transform *after* he has
started to use the surface in a context, as apparently WebKit does.
Since this is not the only instance where we may need to invalidate
caches if the user modifies state, introduce a simple mechanism for
hooking into notifications of property changes.

Fixes test/clip-device-offset.

--- a/src/Makefile.sources
+++ b/src/Makefile.sources
@@ -138,6 +138,7 @@ cairo_sources = \
 	cairo-recording-surface.c \
 	cairo-misc.c \
 	cairo-mutex.c \
+	cairo-observer.c \
 	cairo-output-stream.c \
 	cairo-paginated-surface.c \
 	cairo-path-bounds.c \
