test: More coverage coverage.
A couple of different shapes that aim to test the tessellation side of
the rasterisers more... And worryingly there does seem to be an
unexpected systematic error.

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -345,6 +345,14 @@ REFERENCE_IMAGES = \
 	copy-path.ref.png \
 	coverage-rectangles.ref.png \
 	coverage-rectangles.xlib.xfail.png \
+	coverage-intersecting-triangles.ref.png \
+	coverage-intersecting-triangles.xlib.xfail.png \
+	coverage-intersecting-quads.ref.png \
+	coverage-intersecting-quads.xlib.xfail.png \
+	coverage-row-trianges.ref.png \
+	coverage-row-trianges.xlib.xfail.png \
+	coverage-column-trianges.ref.png \
+	coverage-column-trianges.xlib.xfail.png \
 	coverage-triangles.ref.png \
 	coverage-triangles.xlib.xfail.png \
 	create-from-png-stream.ref.png \
