test: Missing ref images

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -349,10 +349,10 @@ REFERENCE_IMAGES = \
 	coverage-intersecting-triangles.xlib.xfail.png \
 	coverage-intersecting-quads.ref.png \
 	coverage-intersecting-quads.xlib.xfail.png \
-	coverage-row-trianges.ref.png \
-	coverage-row-trianges.xlib.xfail.png \
-	coverage-column-trianges.ref.png \
-	coverage-column-trianges.xlib.xfail.png \
+	coverage-row-triangles.ref.png \
+	coverage-row-triangles.xlib.xfail.png \
+	coverage-column-triangles.ref.png \
+	coverage-column-triangles.xlib.xfail.png \
 	coverage-triangles.ref.png \
 	coverage-triangles.xlib.xfail.png \
 	create-from-png-stream.ref.png \
