test: Add an aliasing test case.
Just a simple test in drawing neighbouring edges and looking for the
effects of aliasing.

--- a/test/Makefile.sources
+++ b/test/Makefile.sources
@@ -4,6 +4,7 @@ test_sources = \
 	a1-mask-sample.c 				\
 	a1-traps-sample.c				\
 	a8-mask.c					\
+	aliasing.c					\
 	alpha-similar.c					\
 	big-line.c					\
 	big-trap.c					\
