test: Add a1-rasterisation
Check the rounding criteria when rasterising.

--- a/test/Makefile.sources
+++ b/test/Makefile.sources
@@ -3,6 +3,7 @@ test_sources = \
 	a1-mask.c					\
 	a1-mask-sample.c 				\
 	a1-traps-sample.c				\
+	a1-rasterisation.c				\
 	a8-mask.c					\
 	aliasing.c					\
 	alpha-similar.c					\
