test: Add a1-bug
Capture a bug report from "cairouser" where a1 rasterisation is now
broken.

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -131,6 +131,9 @@ CLEANFILES += $(BUILT_SOURCES)
 
 # All tests which have a reference image go here.
 REFERENCE_IMAGES = \
+	a1-bug.ref.png \
+	a1-bug.image16.ref.png \
+	a1-bug.xlib.ref.png \
 	a1-image-sample.ref.png \
 	a1-image-sample.gl.xfail.png \
 	a1-image-sample.quartz.xfail.png \
