--- a/src/Makefile.sources
+++ b/src/Makefile.sources
@@ -371,6 +371,9 @@ endif
 
 cairo_script_headers = cairo-script.h
 cairo_script_sources = cairo-script-surface.c
+if CAIRO_HAS_SCRIPT_SURFACE
+req_cairo_deflate_stream_sources = $(cairo_deflate_stream_sources)
+endif
 
 cairo_xml_headers = cairo-xml.h
 cairo_xml_sources = cairo-xml-surface.c
