test: Add a new test for a bug with device-offset tests
All the credit for this one goes to make distcheck

--- a/test/Makefile.sources
+++ b/test/Makefile.sources
@@ -191,6 +191,7 @@ test_sources = \
 	png.c						\
 	push-group.c					\
 	push-group-color.c				\
+	push-group-path-offset.c			\
 	radial-gradient.c				\
 	radial-gradient-extend.c			\
 	radial-gradient-mask.c				\
