xlib: Compile without fontconfig
Create a cairo-fontconfig-private.h where we can add the missing defines
in a common location rather than in the body of the code.

--- a/src/Makefile.sources
+++ b/src/Makefile.sources
@@ -67,6 +67,7 @@ cairo_private = \
 	cairo-fixed-type-private.h \
 	cairo-freelist-private.h \
 	cairo-freed-pool-private.h \
+	cairo-fontconfig-private.h \
 	cairo-gstate-private.h \
 	cairo-hash-private.h \
 	cairo-image-info-private.h \
