--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -24,13 +24,31 @@ cairoinclude_HEADERS = $(enabled_cairo_headers)
 
 lib_LTLIBRARIES = libcairo.la
 
+if BUILD_CXX
+cairo_cxx_lib = libcairo_cxx.la
+else
+cairo_cxx_lib = libcairo_cxx.la
+endif
+
+noinst_LTLIBRARIES = $(cairo_cxx_lib)
+libcairo_cxx_la_SOURCES = \
+	$(enabled_cairo_headers) \
+	$(enabled_cairo_private) \
+	$(enabled_cairo_cxx_sources) \
+	$(NULL)
+libcairo_cxx_la_LDFLAGS = $(AM_LDFLAGS) -version-info $(CAIRO_LIBTOOL_VERSION_INFO) -no-undefined $(export_symbols)
+libcairo_cxx_la_LIBADD = $(CAIRO_LIBS)
+libcairo_cxx_la_DEPENDENCIES = $(cairo_def_dependency)
+
+
 libcairo_la_SOURCES = \
 	$(enabled_cairo_headers) \
 	$(enabled_cairo_private) \
 	$(enabled_cairo_sources) \
 	$(NULL)
 libcairo_la_LDFLAGS = $(AM_LDFLAGS) -version-info $(CAIRO_LIBTOOL_VERSION_INFO) -no-undefined $(export_symbols)
-libcairo_la_LIBADD = $(CAIRO_LIBS)
+libcairo_la_LIBADD = $(CAIRO_LIBS) \
+	$(enabled_cairo_cxx_lib)
 libcairo_la_DEPENDENCIES = $(cairo_def_dependency)
 
 # Special headers
