build: Fix typo that makes C++ libs not build

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -48,7 +48,7 @@ libcairo_la_SOURCES = \
 	$(NULL)
 libcairo_la_LDFLAGS = $(AM_LDFLAGS) -version-info $(CAIRO_LIBTOOL_VERSION_INFO) -no-undefined $(export_symbols)
 libcairo_la_LIBADD = $(CAIRO_LIBS) \
-	$(enabled_cairo_cxx_lib)
+	$(cairo_cxx_lib)
 libcairo_la_DEPENDENCIES = $(cairo_def_dependency)
 
 # Special headers
